Cluster Security/isolator-manifests/app network policies/ns-dev-app-network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dev-app-allow-dev-ns
  namespace: isolator-dev
spec:
  podSelector:
    matchLabels:
      env: isolator-dev
      svc: isolator-app-deployment
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: isolator-dev
