Cluster Security/isolator-manifests/app network policies/ns-test-app-network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: isolator-test-ns
  namespace: isolator-test
spec:
  podSelector:
    matchLabels:
      env: isolator-test
      svc: isolator-app-deployment
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: isolator-test
